package model.entity;

public class Administrador {
}
