package model.entity;

public class AprobacionEvento {
}
