package model.entity;

public class Boletin
{
}
