package model.entity;

public class Comunidad {
}
