package model.entity;

public class CreacionBoletin {
}
