package model.entity;

public class Sesion {
}
