package model.entity;

public class SolicitudEvento {
}
