package model.entity;

public class TipoEvento {
}
