@startuml Sistema_Gestion_Parroquial

' ==================== CONFIGURACIÓN ====================
skinparam linetype ortho
skinparam backgroundColor #FFFEF7
skinparam roundcorner 5

' ==================== ENTIDADES ====================

entity "Usuario" as usuario {
  * **id_usuario** : INT <<PK>>
  --
  * email : VARCHAR(100) <<UNIQUE>>
  * password_hash : VARCHAR(255)
  * salt : VARCHAR(255)
  * rol : ENUM('fiel', 'administrador')
  * estado : BOOLEAN
  * fecha_creacion : TIMESTAMP
  * ultimo_acceso : TIMESTAMP
}

entity "Fiel" as fiel {
  * **id_fiel** : INT <<PK>>
  * **id_usuario** : INT <<FK>>
  --
  DNI : VARCHAR(8) <<UNIQUE>>
  Nombre : VARCHAR(50)
  Apellido : VARCHAR(50)
  Rol : VARCHAR(50)
  Foto : BYTEA
  Fecha_Nac : DATE
  correo : VARCHAR(100)
  Telefono : VARCHAR(15)
  Estado : BOOLEAN
  id_comunidad : INT <<FK>>
}

entity "Comunidad" as comunidad {
  * **id_comunidad** : INT <<PK>>
  --
  * nombre : VARCHAR(50)
  * tipo : VARCHAR(50)
  fotografia : BYTEA
  id_dirigente : INT <<FK>>
  Estado : BOOLEAN
}

entity "Administrador" as administrador {
  * **id_administrador** : INT <<PK>>
  * **id_usuario** : INT <<FK>>
  --
  * DNI : VARCHAR(8) <<UNIQUE>>
  * Nombre : VARCHAR(50)
  Apellido : VARCHAR(50)
  correo : VARCHAR(100)
  Rol : VARCHAR(50)
  Foto : BYTEA
  Fecha_Nac : DATE
  Telefono : VARCHAR(15)
}

entity "Personal_Parroquia" as personal {
  * **id_personal** : INT <<PK>>
  --
  * DNI : VARCHAR(8) <<UNIQUE>>
  * Nombre : VARCHAR(50)
  * Apellido : VARCHAR(50)
  * Rol : VARCHAR(50)
  Telefono : VARCHAR(15)
  Estado : BOOLEAN
}

entity "Cargo" as cargo {
  * **id_solicitud** : INT <<PK>>
  * **id_personal** : INT <<FK>>
  --
  descripcion : VARCHAR(255)
}

entity "Disponibilidad" as disponibilidad {
  * **id_disponibilidad** : INT <<PK>>
  * **id_personal** : INT <<FK>>
  --
  * Fecha : DATE
  * hora_inicio : TIME
  * hora_fin : TIME
}

entity "Tipo_Evento" as tipo_evento {
  * **id_tipo_evento** : INT <<PK>>
  --
  * Nombre : VARCHAR(50)
  Descripcion : TEXT
  aforo_promedio : INT
  Acceso_publico : BOOLEAN
  Estado : BOOLEAN
}

entity "Solicitud_Evento" as solicitud_evento {
  * **id_evento** : INT <<PK>>
  * **id_fiel** : INT <<FK>>
  * **id_tipo_evento** : INT <<FK>>
  --
  * Titulo : VARCHAR(50)
  Descripcion : TEXT
  * Fecha : DATE
  * hora_inicio : TIME
  * hora_fin : TIME
  ubicacion : VARCHAR(255)
  imagen_portada : BYTEA
  asunto : VARCHAR(50)
  enlace_reunion : VARCHAR(300)
  Estado : BOOLEAN
}

entity "Solicitud_Personal" as solicitud_personal {
  * **id_solicitud** : INT <<PK>>
  * **id_evento** : INT <<FK>>
  * **id_personal** : INT <<FK>>
  --
  descripcion : VARCHAR(255)
  estado : BOOLEAN
}

entity "Aprobacion_Evento" as aprobacion {
  * **id_administrador** : INT <<FK>>
  * **id_evento** : INT <<FK>>
  --
  Aceptacion : BOOLEAN
  Razon_rechazo : VARCHAR(255)
  fecha_respuesta : TIMESTAMP
}

entity "Boletin" as boletin {
  * **id_boletin** : INT <<PK>>
  --
  * Titulo : VARCHAR(100)
  * Fecha_Disponible : DATE
  Visibilidad : VARCHAR(25)
  Media : VARCHAR(25)
  Descripcion : TEXT
  Estado : BOOLEAN
}

entity "Creacion_Boletin" as creacion_boletin {
  * **id_administrador** : INT <<FK>>
  * **id_boletin** : INT <<FK>>
  --
  fecha_creacion : TIMESTAMP
}

entity "Manejabilidad" as manejabilidad {
  * **id_manejabilidad** : INT <<PK>>
  * **id_personal** : INT <<FK>>
  --
  * cargo_actual : VARCHAR(100)
  * fecha_inicio : DATE
  fecha_fin : DATE
  descripcion : TEXT
  estado_asignacion : BOOLEAN
}

entity "Sesion" as sesion {
  * **id_sesion** : INT <<PK>>
  * **id_usuario** : INT <<FK>>
  --
  * token : VARCHAR(255) <<UNIQUE>>
  * fecha_inicio : TIMESTAMP
  * fecha_expiracion : TIMESTAMP
  ip_address : VARCHAR(45)
  user_agent : TEXT
  activa : BOOLEAN
}

entity "Registro_Actividad" as registro {
  * **id_registro** : INT <<PK>>
  * **id_usuario** : INT <<FK>>
  --
  * accion : VARCHAR(100)
  * fecha_hora : TIMESTAMP
  tabla_afectada : VARCHAR(50)
  id_registro_afectado : INT
  descripcion : TEXT
}

' ==================== RELACIONES ====================

' Usuario - Fiel (1:1)
usuario ||--|| fiel : "tiene perfil"

' Usuario - Administrador (1:1)
usuario ||--|| administrador : "tiene perfil"

' Usuario - Sesion (1:N)
usuario ||--o{ sesion : "tiene"

' Usuario - Registro_Actividad (1:N)
usuario ||--o{ registro : "genera"

' Fiel - Comunidad (N:1)
fiel }o--|| comunidad : "pertenece a"

' Fiel - Solicitud_Evento (1:N)
fiel ||--o{ solicitud_evento : "solicita"

' Comunidad - Fiel (dirigente) (1:1)
comunidad ||--o| fiel : "dirigida por"

' Personal - Disponibilidad (1:N)
personal ||--o{ disponibilidad : "tiene"

' Personal - Cargo (1:N)
personal ||--o{ cargo : "asignado a"

' Personal - Manejabilidad (1:N)
personal ||--o{ manejabilidad : "historial de"

' Personal - Solicitud_Personal (1:N)
personal ||--o{ solicitud_personal : "asignado en"

' Tipo_Evento - Solicitud_Evento (1:N)
tipo_evento ||--o{ solicitud_evento : "clasifica"

' Solicitud_Evento - Solicitud_Personal (1:N)
solicitud_evento ||--o{ solicitud_personal : "requiere"

' Solicitud_Evento - Aprobacion_Evento (1:1)
solicitud_evento ||--|| aprobacion : "evaluada en"

' Administrador - Aprobacion_Evento (1:N)
administrador ||--o{ aprobacion : "aprueba/rechaza"

' Administrador - Creacion_Boletin (1:N)
administrador ||--o{ creacion_boletin : "crea"

' Boletin - Creacion_Boletin (1:1)
boletin ||--|| creacion_boletin : "creado por"

@enduml